packages/kotlin/ttrp-frontend/src/test/resources/corpus/ttr-sql/reject/TTRP-SQL-011.ttrp
// expect: TTRP-SQL-011
container c target erp_pg """sql
SELECT x FROM t PIVOT (a)
"""
